--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,21 @@ server.port = 8080
 # 2. JSP 설정
 #spring.mvc.view.prefix=/WEB-INF/views/
 #spring.mvc.view.suffix=.jsp
+
+# 3. (네이버 기준) 이메일 호스트 정보
+    # 3-1. 네이버 회사의 smtp 호스트 서버 이름
+spring.mail.host = smtp.naver.com
+
+    # 3-2. 네이버 회사의 smtp port 번호
+spring.mail.port = 587
+
+    # 3-3. 네이버 회사의 smtp 호스트를 바용할 네이버 계정(띄어쓰기 주의)
+    # public 으로 설정된 git 저장소에 올리기 금지
+spring.mail.username=''
+spring.mail.password=''
+
+    # 3-4. 비밀번호 인증 여부
+spring.mail.properties.mail.smtp.auth = true
+
+    # 3-5. 보안 인증 여부, TLS 보안 연결 사용하겠다는 뜻
+spring.mail.properties.mail.smtp.starttls = true
